--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -18,3 +18,13 @@ jobs:
 
       - name: Pre Commit Checks
         uses: pre-commit/action@v3.0.0
+
+  unit-test:
+    runs-on: ubuntu-latest
+    steps:
+
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Run Unit Tests
+        run: cargo test --verbose
